--- a/ClientCRUD/src/app/employee/employee.component.html
+++ b/ClientCRUD/src/app/employee/employee.component.html
@@ -27,6 +27,7 @@
             <th>Id</th>
             <th>Department</th>
             <th>Name</th>
+            <th>Status</th>
             <th>Date of birth</th>
             <th>Employment date</th>
             <th>Salary</th>
@@ -37,6 +38,7 @@
             <td>{{employee.id}}</td>
             <td>{{employee.department}}</td>
             <td>{{employee.name}}</td>
+            <td>{{employee.status}}</td>
             <td>{{employee.date_of_birth}}</td>
             <td>{{employee.employment_date}}</td>
             <td>{{employee.salary}}</td>
